--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "@firebase/firestore-types": "^1.11.0",
     "@types/busboy": "^0.2.3",
     "@types/testing-library__dom": "^7.5.0",
+    "axios": "^0.19.2",
     "busboy": "^0.3.1",
     "express": "^4.17.1",
     "firebase": "^7.15.5",
