--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.12.50",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/testing-library__dom": "^7.5.0",
+    "axios": "^0.19.2",
+    "firebase": "^7.16.1",
+    "firebase-admin": "^9.0.0",
+    "firebase-functions": "^3.8.0",
     "install": "^0.13.0",
     "normalize.css": "^8.0.1",
+    "npm": "^6.14.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
