--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase-admin": "^9.0.0",
     "firebase-functions": "^3.8.0",
     "install": "^0.13.0",
+    "mdi-material-ui": "^6.16.0",
     "normalize.css": "^8.0.1",
     "npm": "^6.14.6",
     "react": "^16.13.1",
