--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/testing-library__dom": "^7.5.0",
     "axios": "^0.19.2",
+    "css-loader": "^3.6.0",
     "firebase": "^7.16.1",
     "firebase-admin": "^9.0.0",
     "firebase-functions": "^3.8.0",
     "install": "^0.13.0",
     "mdi-material-ui": "^6.16.0",
+    "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "npm": "^6.14.6",
     "react": "^16.13.1",
+    "react-alice-carousel": "^1.19.3",
     "react-dom": "^16.13.1",
+    "react-inlinesvg": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "scrollreveal": "^4.0.7",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -50,5 +55,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/scrollreveal": "0.0.6"
+  }
 }
