--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@firebase/firestore-types": "^1.11.0",
     "@types/busboy": "^0.2.3",
+    "@types/cors": "^2.8.6",
     "@types/testing-library__dom": "^7.5.0",
     "axios": "^0.19.2",
     "busboy": "^0.3.1",
