--- a/functions/package.json
+++ b/functions/package.json
@@ -14,10 +14,6 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@firebase/firestore-types": "^1.11.0",
-    "@types/busboy": "^0.2.3",
-    "@types/cors": "^2.8.6",
-    "@types/testing-library__dom": "^7.5.0",
     "axios": "^0.19.2",
     "busboy": "^0.3.1",
     "cors": "^2.8.5",
@@ -30,7 +26,12 @@
   "devDependencies": {
     "tslint": "^5.12.0",
     "typescript": "^3.2.2",
-    "firebase-functions-test": "^0.1.6"
+    "firebase-functions-test": "^0.1.6",
+    "@firebase/firestore-types": "^1.11.0",
+    "@types/busboy": "^0.2.3",
+    "@types/cors": "^2.8.6",
+    "@types/testing-library__dom": "^7.5.0"
+
   },
   "private": true
 }
