--- a/package.json
+++ b/package.json
@@ -6,17 +6,6 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/axios": "^0.14.0",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.12.50",
-    "@types/react": "^16.9.43",
-    "@types/react-autosuggest": "^9.3.14",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/testing-library__dom": "^7.5.0",
     "axios": "^0.19.2",
     "css-loader": "^3.6.0",
     "firebase": "^7.16.1",
@@ -33,10 +22,8 @@
     "react-dom": "^16.13.1",
     "react-inlinesvg": "^2.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
     "scrollreveal": "^4.0.7",
-    "styled-components": "^5.1.1",
-    "typescript": "~3.7.2"
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -60,6 +47,20 @@
     ]
   },
   "devDependencies": {
-    "@types/scrollreveal": "0.0.6"
+    "react-scripts": "3.4.1",
+    "typescript": "~3.7.2",
+    "@types/scrollreveal": "0.0.6",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.12.50",
+    "@types/react": "^16.9.43",
+    "@types/react-autosuggest": "^9.3.14",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/testing-library__dom": "^7.5.0"
+
   }
 }
