--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "functions",
+  "name": "server",
   "scripts": {
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
@@ -17,6 +17,11 @@
     "axios": "^0.19.2",
     "busboy": "^0.3.1",
     "cors": "^2.8.5",
+    "firebase-functions-test": "^0.1.6",
+    "@firebase/firestore-types": "^1.11.0",
+    "@types/busboy": "^0.2.3",
+    "@types/cors": "^2.8.6",
+    "@types/testing-library__dom": "^7.5.0",
     "express": "^4.17.1",
     "firebase": "^7.15.5",
     "firebase-admin": "^8.6.0",
@@ -25,13 +30,7 @@
   },
   "devDependencies": {
     "tslint": "^5.12.0",
-    "typescript": "^3.2.2",
-    "firebase-functions-test": "^0.1.6",
-    "@firebase/firestore-types": "^1.11.0",
-    "@types/busboy": "^0.2.3",
-    "@types/cors": "^2.8.6",
-    "@types/testing-library__dom": "^7.5.0"
-
+    "typescript": "^3.2.2"
   },
   "private": true
 }
