--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@types/react-window": "^1.8.2",
     "axios": "^0.19.2",
     "css-loader": "^3.6.0",
     "firebase": "^7.16.1",
@@ -22,6 +23,7 @@
     "react-dom": "^16.13.1",
     "react-inlinesvg": "^2.0.0",
     "react-router-dom": "^5.2.0",
+    "react-window": "^1.8.5",
     "scrollreveal": "^4.0.7",
     "styled-components": "^5.1.1"
   },
