--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "npm": "^6.14.6",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-alice-carousel": "^1.19.3",
     "react-dom": "^16.13.1",
