--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@types/query-string": "^6.3.0",
     "@types/react-window": "^1.8.2",
     "axios": "^0.19.2",
     "css-loader": "^3.6.0",
