--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/query-string": "^6.3.0",
     "@types/react-window": "^1.8.2",
     "axios": "^0.19.2",
+    "clsx": "^1.1.1",
     "css-loader": "^3.6.0",
     "firebase": "^7.16.1",
     "firebase-admin": "^9.0.0",
