--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@types/query-string": "^6.3.0",
+    "@types/react-alice-carousel": "^1.15.3",
     "@types/react-redux": "^7.1.9",
     "@types/react-text-mask": "^5.4.6",
     "@types/react-window": "^1.8.2",
@@ -28,6 +29,7 @@
     "react-dom": "^16.13.1",
     "react-inlinesvg": "^2.0.0",
     "react-redux": "^7.2.1",
+    "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-text-mask": "^5.4.3",
     "react-window": "^1.8.5",
