--- a/package.json
+++ b/package.json
@@ -6,11 +6,6 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@types/query-string": "^6.3.0",
-    "@types/react-alice-carousel": "^1.15.3",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-text-mask": "^5.4.6",
-    "@types/react-window": "^1.8.2",
     "axios": "^0.19.2",
     "clsx": "^1.1.1",
     "css-loader": "^3.6.0",
@@ -19,17 +14,17 @@
     "firebase-functions": "^3.8.0",
     "install": "^0.13.0",
     "is-mobile": "^2.2.2",
+    "materialize-css": "^1.0.0-rc.2",
     "mdi-material-ui": "^6.16.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "npm": "^6.14.6",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
-    "react-alice-carousel": "^1.19.3",
     "react-dom": "^16.13.1",
     "react-inlinesvg": "^2.0.0",
+    "react-multi-carousel": "^2.5.5",
     "react-redux": "^7.2.1",
-    "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-text-mask": "^5.4.3",
     "react-window": "^1.8.5",
@@ -61,6 +56,11 @@
     ]
   },
   "devDependencies": {
+    "@types/query-string": "^6.3.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-responsive": "^8.0.2",
+    "@types/react-text-mask": "^5.4.6",
+    "@types/react-window": "^1.8.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
