--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.19.2",
     "css-loader": "^3.6.0",
+    "emoji-picker-react": "^3.2.4",
     "firebase": "^7.16.1",
-    "firebase-admin": "^9.0.0",
+    "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.8.0",
     "install": "^0.13.0",
     "is-mobile": "^2.2.2",
@@ -56,24 +57,24 @@
     ]
   },
   "devDependencies": {
-    "@types/query-string": "^6.3.0",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-responsive": "^8.0.2",
-    "@types/react-text-mask": "^5.4.6",
-    "@types/react-window": "^1.8.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.12.50",
+    "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.43",
     "@types/react-autosuggest": "^9.3.14",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-text-mask": "^5.4.6",
+    "@types/react-window": "^1.8.2",
     "@types/scrollreveal": "0.0.6",
     "@types/testing-library__dom": "^7.5.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "typescript": "~3.7.2"
   }
 }
